name:                my-xmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             ../xmonad.hs
  -- other-modules lists custom modules in my ~/.xmonad/lib/ directory
  other-modules:
  build-depends:       base
                     , containers
                     , dbus
                     , gtk3
                     , network
                     , network-bsd
                     , taffybar == 3.2.3
                     , utf8-string
                     , xmonad >= 0.15
                     , xmonad-contrib >= 0.15
                     , xmonad-extras >= 0.15
                     , X11
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -fno-warn-missing-signatures -threaded
  cpp-options:         -D__attribute__(A)=
