name: my-taffybar
version: 0.1.0.0
author: Kevin Oberlies
maintainer: favilo@gmail.com
build-type: Simple
cabal-version: >=1.10

executable my-taffybar
  hs-source-dirs:  .
  main-is:         taffybar.hs
  ghc-options:     -threaded -rtsopts -with-rtsopts=-N
  build-depends:   base
                   , containers
                   , directory
                   , filepath
                   , gtk3
                   , taffybar
                   , transformers
                   , X11>=1.8
  default-language:  Haskell2010
